--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.1.5",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-appearance": "^0.3.3",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
